output/objects/Cobranca_v2__c.object
<CustomObject>
    <description>Processo interno de cobrança de clientes inadimplentes.</description>
    <label>Cobrança V2</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Número da Cobrança</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cobranças V2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Bens_de_Terceiros__c</fullName>
        <label>Bens de Terceiros</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
                <value>
                    <fullName>Sim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carta_10_dias_inadimplencia__c</fullName>
        <label>Carta 10 dias inadimplencia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carta_20_dias_inadimplencia__c</fullName>
        <label>Carta 20 dias inadimplencia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cliente_Cr_tico__c</fullName>
        <label>Cliente Crítico</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_f__c</fullName>
        <formula>Nome_da_Conta__r.FirstName &amp; &quot; &quot; &amp;  Nome_da_Conta__r.LastName</formula>
        <label>Cliente (f)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marcação de Cliente VIP, processo diferente com atraso mais de 30 dias.</inlineHelpText>
        <label>Cliente VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compara_Datas__c</fullName>
        <formula>IF(Data_da_Primeira_Parcela_atr__c = Data_da_Parcela_UNIDADE__c,
    &quot;Igual&quot;,
    &quot;Diferente&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compara Datas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contato_Cliente__c</fullName>
        <inlineHelpText>Contato do Cliente</inlineHelpText>
        <label>Contato Cliente</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contato_CRC_VIP__c</fullName>
        <label>Contato CRC VIP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contato_CRC__c</fullName>
        <label>Contato CRC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contato_JUR__c</fullName>
        <label>Contato TER</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contato_sem_sucesso_VIP__c</fullName>
        <label>Contato sem sucesso VIP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contato_sem_sucesso__c</fullName>
        <label>Contato sem sucesso</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_da_Parcela_UNIDADE__c</fullName>
        <formula>Unidade__r.Data_Inadimplencia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data da Parcela UNIDADE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_da_Primeira_Parcela_atr__c</fullName>
        <defaultValue>TODAY() -3</defaultValue>
        <inlineHelpText>Informar a data da 1ª parcela atrasada</inlineHelpText>
        <label>Data da Primeira Parcela atrasada</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_de_conclusao__c</fullName>
        <label>Data de conclusão</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_de_Recebimento__c</fullName>
        <label>Data de Recebimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_do_ultimo_contato__c</fullName>
        <label>Data do último contato</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Envio_Terceirizada__c</fullName>
        <inlineHelpText>Data do envio para Terceirizada</inlineHelpText>
        <label>Data Envio Terceirizada</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Recebimento_Notifica_o_CRC__c</fullName>
        <label>Data Recebimento Notificação - CRC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Recebimento_Notifica_o__c</fullName>
        <label>Data Recebimento Notificação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dias_da_Regua_de_Cobranca__c</fullName>
        <formula>TODAY() - Data_da_Primeira_Parcela_atr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dias da Régua de Cobrança</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dias_de_inadimpl_ncia__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Dias de inadimplência</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_cobran_a__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email cobrança</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_para_cobranca__c</fullName>
        <label>Email para cobrança</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Terceirizada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Terceirizada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Empreendimento_f__c</fullName>
        <formula>Nome_do_Empreendimento__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Empreendimento (f)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empresa_Terceirizada__c</fullName>
        <inlineHelpText>ABDALA
DI REZENDE</inlineHelpText>
        <label>Empresa Terceirizada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABDALA</fullName>
                </value>
                <value>
                    <fullName>DI REZENDE</fullName>
                </value>
                <value>
                    <fullName>ARAUJO ASSOCIADOS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etapa_da_Cobran_a__c</fullName>
        <label>Etapa da Cobrança</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cobrança não iniciada</fullName>
                    <default>true</default>
                    <label>Cobrança não iniciada</label>
                </value>
                <value>
                    <fullName>Contato ativo realizado</fullName>
                </value>
                <value>
                    <fullName>Contato efetivado</fullName>
                </value>
                <value>
                    <fullName>Pagamento Realizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_mail_Conta__c</fullName>
        <formula>Nome_da_Conta__r.Email__c</formula>
        <label>E-mail Conta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fase_da_Cobran_a__c</fullName>
        <label>Status da Cobrança</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cobrança Não Iniciada</fullName>
                    <default>true</default>
                    <label>Cobrança Não Iniciada</label>
                </value>
                <value>
                    <fullName>Cobrança automática iniciada</fullName>
                </value>
                <value>
                    <fullName>Aguardando Pagamento</fullName>
                </value>
                <value>
                    <fullName>Rescisão</fullName>
                </value>
                <value>
                    <fullName>Alega Pagamento</fullName>
                    <isActive>false</isActive>
                    <label>Alega Pagamento</label>
                </value>
                <value>
                    <fullName>Ação Judicial</fullName>
                    <isActive>false</isActive>
                    <label>Ação Judicial</label>
                </value>
                <value>
                    <fullName>Cobrança Suspensa</fullName>
                    <isActive>false</isActive>
                    <label>Cobrança Suspensa</label>
                </value>
                <value>
                    <fullName>Desligamento Financeiro</fullName>
                    <isActive>false</isActive>
                    <label>Desligamento Financeiro</label>
                </value>
                <value>
                    <fullName>Em Negociação</fullName>
                    <isActive>false</isActive>
                    <label>Em Negociação</label>
                </value>
                <value>
                    <fullName>Enviado Aditivo</fullName>
                    <isActive>false</isActive>
                    <label>Enviado Aditivo</label>
                </value>
                <value>
                    <fullName>Enviado Boleto</fullName>
                    <isActive>false</isActive>
                    <label>Enviado Boleto</label>
                </value>
                <value>
                    <fullName>Finalizada</fullName>
                    <isActive>false</isActive>
                    <label>Finalizada</label>
                </value>
                <value>
                    <fullName>Financiamento Bancário</fullName>
                    <isActive>false</isActive>
                    <label>Financiamento Bancário</label>
                </value>
                <value>
                    <fullName>Leilão</fullName>
                    <isActive>false</isActive>
                    <label>Leilão</label>
                </value>
                <value>
                    <fullName>Negociação Diretoria</fullName>
                    <isActive>false</isActive>
                    <label>Negociação Diretoria</label>
                </value>
                <value>
                    <fullName>Notificação</fullName>
                    <isActive>false</isActive>
                    <label>Notificação</label>
                </value>
                <value>
                    <fullName>Permuta</fullName>
                    <isActive>false</isActive>
                    <label>Permuta</label>
                </value>
                <value>
                    <fullName>Renegociação</fullName>
                    <isActive>false</isActive>
                    <label>Renegociação</label>
                </value>
                <value>
                    <fullName>Rescisão Contratual</fullName>
                    <isActive>false</isActive>
                    <label>Rescisão Contratual</label>
                </value>
                <value>
                    <fullName>Retenção</fullName>
                    <isActive>false</isActive>
                    <label>Retenção</label>
                </value>
                <value>
                    <fullName>Sem Contato</fullName>
                    <isActive>false</isActive>
                    <label>Sem Contato</label>
                </value>
                <value>
                    <fullName>Sem previsão de pagamento</fullName>
                    <isActive>false</isActive>
                    <label>Sem previsão de
                    pagamento</label>
                </value>
                <value>
                    <fullName>Tentativa de contato sem sucesso</fullName>
                    <isActive>false</isActive>
                    <label>Tentativa de contato sem sucesso</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Informa_es_do_Bem_de_Terceiro__c</fullName>
        <label>Informações do Bem de Terceiro</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Informa_es_do_Contato_CRC_VIP__c</fullName>
        <label>Informações do Contato CRC VIP</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Informa_es_do_contato_CRC__c</fullName>
        <label>Informações do contato CRC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Informa_es_do_Financeiro__c</fullName>
        <label>Informações do Financeiro</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Informa_oes_do_contato_JUR__c</fullName>
        <label>Informações gerais da Terceirizada</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interagir_com_Financeiro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interagir com Financeiro?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nome_da_Conta__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Nome da Conta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cobranças V2</relationshipLabel>
        <relationshipName>Cobrancas_v2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nome_do_Empreendimento__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Nome do Empreendimento</label>
        <referenceTo>Empreendimento__c</referenceTo>
        <relationshipLabel>Cobranças V2</relationshipLabel>
        <relationshipName>Cobrancas_v2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>N_Objeto_Correios_10_dias__c</fullName>
        <label>Nº Objeto Correios - 10 dias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>N_Objeto_Correios_20_dias__c</fullName>
        <label>Nº Objeto Correios - 20 dias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promessa_de_Pagamento_VIP__c</fullName>
        <inlineHelpText>Data da Promessa de Pagamento Cliente VIP</inlineHelpText>
        <label>Previsão de Pagamento VIP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promessa_de_Pagamento__c</fullName>
        <inlineHelpText>Cliente prometeu efetuar o pagamento na data. Alerta 3 dias após a data informada para confirmação se o pagamento foi efetuado.</inlineHelpText>
        <label>Previsão de Pagamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proprietario_f__c</fullName>
        <formula>Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proprietario (f)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respons_vel_Atual_da_cobran_a__c</fullName>
        <label>Responsável Atual da cobrança</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRC</fullName>
                    <default>true</default>
                    <label>CRC</label>
                </value>
                <value>
                    <fullName>FIN</fullName>
                </value>
                <value>
                    <fullName>JUR</fullName>
                </value>
                <value>
                    <fullName>TERCEIRIZADA</fullName>
                </value>
                <value>
                    <fullName>COMERCIAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Respons_vel_cobran_a_JUR__c</fullName>
        <label>Responsável cobrança JUR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ana Beatriz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Envio_Notifica_o_Extrajudicial__c</fullName>
        <label>Status Envio Notificação Extrajudicial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nenhum</fullName>
                </value>
                <value>
                    <fullName>Positiva</fullName>
                </value>
                <value>
                    <fullName>Negativa</fullName>
                </value>
                <value>
                    <fullName>Em cumprimento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Envio_Notifica_o_Extra_CRC__c</fullName>
        <label>Status Envio Notificação Extra - CRC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nenhum</fullName>
                    <default>true</default>
                    <label>Nenhum</label>
                </value>
                <value>
                    <fullName>Positiva</fullName>
                </value>
                <value>
                    <fullName>Negativa</fullName>
                </value>
                <value>
                    <fullName>Em Cumprimento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Jur_dico__c</fullName>
        <label>Status Terceirizada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Em análise</fullName>
                </value>
                <value>
                    <fullName>Contato Telefonico</fullName>
                </value>
                <value>
                    <fullName>Acordo</fullName>
                </value>
                <value>
                    <fullName>Impossibilidade de negociação</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aberto</fullName>
                    <default>true</default>
                    <label>Aberto</label>
                </value>
                <value>
                    <fullName>Fechado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suspender_Cobran_a__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Caso especifico onde não haverá cobrança para Inadimplentes</inlineHelpText>
        <label>Suspender Cobrança</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefone_Contato__c</fullName>
        <inlineHelpText>Telefone de contato</inlineHelpText>
        <label>Telefone Contato</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefone_Conta__c</fullName>
        <formula>Nome_da_Conta__r.Telefone_Todos__c</formula>
        <label>Telefone Conta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unidade_f__c</fullName>
        <formula>Unidade__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unidade (f)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unidade_Status_Contrato__c</fullName>
        <formula>Unidade__r.Status_contrato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unidade Status Contrato</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unidade__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Unidade</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Nome_do_Empreendimento__c</field>
                <operation>equals</operation>
                <valueField>Unidade__c.Empreendimento__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Unidade__c</referenceTo>
        <relationshipLabel>Cobranças V2</relationshipLabel>
        <relationshipName>Cobrancas_v2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valor_da_Parcela__c</fullName>
        <label>Valor da Parcela</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_Inadimplente_Inicio__c</fullName>
        <formula>Unidade__r.Valor_Inadimplente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Inadimplente - Inicio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_Inadimplente__c</fullName>
        <label>Valor Inadimplente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_Total_Inadimplencia__c</fullName>
        <formula>Unidade__r.Valor_Inadimplente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Inadimplente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WhatsApp__c</fullName>
        <formula>Nome_da_Conta__r.WhatsApp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WhatsApp</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Abertos</fullName>
        <columns>NAME</columns>
        <columns>Unidade__c</columns>
        <columns>Nome_do_Empreendimento__c</columns>
        <columns>Nome_da_Conta__c</columns>
        <columns>Respons_vel_Atual_da_cobran_a__c</columns>
        <columns>Data_da_Primeira_Parcela_atr__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Cliente_f__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Aberto</value>
        </filters>
        <label>Abertos</label>
    </listViews>
    <listViews>
        <fullName>Abertos_ultimos_7_dias</fullName>
        <columns>NAME</columns>
        <columns>Unidade__c</columns>
        <columns>Nome_do_Empreendimento__c</columns>
        <columns>Nome_da_Conta__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Respons_vel_Atual_da_cobran_a__c</columns>
        <columns>Data_da_Primeira_Parcela_atr__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>11/4/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Aberto</value>
        </filters>
        <label>Acompanhamento Novo Processo</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unidade__c</columns>
        <columns>Nome_do_Empreendimento__c</columns>
        <columns>Nome_da_Conta__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Respons_vel_Atual_da_cobran_a__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Aberto</value>
        </filters>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>ARAUJO_ASSOCIADOS</fullName>
        <columns>NAME</columns>
        <columns>Empreendimento_f__c</columns>
        <columns>Unidade_f__c</columns>
        <columns>Cliente_f__c</columns>
        <columns>Status__c</columns>
        <columns>Data_da_Primeira_Parcela_atr__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Respons_vel_Atual_da_cobran_a__c</field>
            <operation>equals</operation>
            <value>TERCEIRIZADA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Aberto</value>
        </filters>
        <filters>
            <field>Empresa_Terceirizada__c</field>
            <operation>equals</operation>
            <value>ARAUJO ASSOCIADOS</value>
        </filters>
        <label>ARAUJO ASSOCIADOS</label>
        <sharedTo>
            <portalRoleAndSubordinates>CRCOpusExecutivodeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>CRCOpusGerentedeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>CRCOpusUsuriodeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>FinanceiroExecutivodeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>FinanceiroGerentedeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>FinanceiroUsuriodeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>ParceiroJurdicoAraujoeAssociadosExecutivodeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>ParceiroJurdicoAraujoeAssociadosGerentedeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>ParceiroJurdicoAraujoeAssociadosUsuriodeParceiro</portalRoleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DIREZENDE</fullName>
        <columns>NAME</columns>
        <columns>Empreendimento_f__c</columns>
        <columns>Unidade_f__c</columns>
        <columns>Cliente_f__c</columns>
        <columns>Status__c</columns>
        <columns>Data_da_Primeira_Parcela_atr__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Respons_vel_Atual_da_cobran_a__c</field>
            <operation>equals</operation>
            <value>TERCEIRIZADA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Aberto</value>
        </filters>
        <filters>
            <field>Empresa_Terceirizada__c</field>
            <operation>equals</operation>
            <value>DI REZENDE</value>
        </filters>
        <label>DIREZENDE</label>
        <sharedTo>
            <portalRoleAndSubordinates>CRCOpusExecutivodeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>CRCOpusGerentedeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>CRCOpusUsuriodeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>ParceiroJuridicoDiRezendeExecutivodeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>ParceiroJuridicoDiRezendeGerentedeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>ParceiroJuridicoDiRezendeUsuriodeParceiro</portalRoleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fechados</fullName>
        <columns>NAME</columns>
        <columns>Unidade__c</columns>
        <columns>Nome_do_Empreendimento__c</columns>
        <columns>Nome_da_Conta__c</columns>
        <columns>Respons_vel_Atual_da_cobran_a__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fechado</value>
        </filters>
        <label>Fechados</label>
    </listViews>
    <listViews>
        <fullName>Financeiro</fullName>
        <columns>NAME</columns>
        <columns>Nome_do_Empreendimento__c</columns>
        <columns>Unidade__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Respons_vel_Atual_da_cobran_a__c</field>
            <operation>equals</operation>
            <value>FIN</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Aberto</value>
        </filters>
        <label>Financeiro</label>
        <sharedTo>
            <portalRoleAndSubordinates>CRCOpusExecutivodeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>CRCOpusGerentedeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>CRCOpusUsuriodeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>JUROpusExecutivodeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>JUROpusGerentedeParceiro</portalRoleAndSubordinates>
            <portalRoleAndSubordinates>JUROpusUsuriodeParceiro</portalRoleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Respons_vel_CRC</fullName>
        <columns>NAME</columns>
        <columns>Nome_do_Empreendimento__c</columns>
        <columns>Unidade__c</columns>
        <columns>Nome_da_Conta__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Data_da_Primeira_Parcela_atr__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Respons_vel_Atual_da_cobran_a__c</field>
            <operation>equals</operation>
            <value>CRC</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Aberto</value>
        </filters>
        <label>Responsável CRC</label>
    </listViews>
    <listViews>
        <fullName>Respons_vel_Jur_dico</fullName>
        <columns>NAME</columns>
        <columns>Unidade__c</columns>
        <columns>Nome_do_Empreendimento__c</columns>
        <columns>Nome_da_Conta__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Respons_vel_cobran_a_JUR__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Aberto</value>
        </filters>
        <filters>
            <field>Respons_vel_Atual_da_cobran_a__c</field>
            <operation>equals</operation>
            <value>JUR</value>
        </filters>
        <label>Responsável Jurídico</label>
    </listViews>
</CustomObject>